@@ -16,7 +16,6 @@ import net.minecraft.util.math.Vec3f;
 import org.junit.jupiter.api.Test;
 
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -95,6 +94,6 @@ public class SkyboxGenerationTest {
 			Files.createFile(path);
 		}
 		String jsonString = gson.toJson(codec.encodeStart(JsonOps.INSTANCE, input).getOrThrow(false, System.err::println));
-		Files.write(path, (jsonString + "\n").getBytes(StandardCharsets.UTF_8));
+		Files.writeString(path, jsonString + "\n");
 	}
 }
